--- a/index.html
+++ b/index.html
@@ -365,25 +365,25 @@
 							<!-- <div class="fsection-title mt-0"> -->
 								<ul class="bullets names">
 									<li>Evan C. Navarro
-										<a src="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
-										<a src="https://github.com/EvanCNavarro">GitHub]</a>
+										<a hred="https://www.linkedin.com/in/EvanCNavarro/">[LinkedIn /</a>
+										<a href="https://github.com/EvanCNavarro">GitHub]</a>
 									</li>
 									<li>Jacques Parizeau
-										<a src="https://www.linkedin.com/in/jjparizeau/">[LinkedIn /</a>
-										<a src="https://github.com/parizeaujj">GitHub]</a>
+										<a href="https://www.linkedin.com/in/jjparizeau/">[LinkedIn /</a>
+										<a href="https://github.com/parizeaujj">GitHub]</a>
 										<a></a>
 									</li>
 									<li>Perdo Roman
-										<a src="https://www.linkedin.com/in/pedro-roman-profile/">[LinkedIn /</a>
-										<a src="https://github.com/proman655">GitHub]</a>
+										<a href="https://www.linkedin.com/in/pedro-roman-profile/">[LinkedIn /</a>
+										<a href="https://github.com/proman655">GitHub]</a>
 									</li>
 									<li>Richard Morand
-										<a src="https://www.linkedin.com/in/richard-m-7a5235208/">[LinkedIn /</a>
-										<a src="https://github.com/MorandR">GitHub]</a>
+										<a href="https://www.linkedin.com/in/richard-m-7a5235208/">[LinkedIn /</a>
+										<a href="https://github.com/MorandR">GitHub]</a>
 									</li>
 									<li>Tu Le
-										<a src="https://www.linkedin.com/in/connect-tu-le/">[LinkedIn /</a>
-										<a src="https://github.com/tule1102">GitHub]</a>
+										<a href="https://www.linkedin.com/in/connect-tu-le/">[LinkedIn /</a>
+										<a href="https://github.com/tule1102">GitHub]</a>
 									</li>
 
 								</ul>
